# priority_queue

./: CMakeLists.txt
include/: priorities.h  schueler.h
src/: main.cpp  priorities.cpp  schueler.cpp
test/: CMakeLists.txt  Main_TestAll.cpp  priorities_Test.cpp  schueler_Test.cpp
